<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/d1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#EDE7F6"
            android:gravity="center"
            android:text="@string/determnistic"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dk"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="#D1C4E9"
            android:gravity="center"
            android:text="@string/dd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/m1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#B39DDB"
            android:gravity="center"
            android:text="@string/memoryless"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9575CD"
            android:gravity="center"
            android:text="@string/memorylessK"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mmc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7E57C2"
            android:gravity="center"
            android:text="@string/MMC"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mmck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/MMCk"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

