<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCE4EC"
    tools:context=".InDk">

    <EditText
        android:id="@+id/k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/K"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/λ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lamda"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/μ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/miu"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"

        />

    <Button
        android:id="@+id/resdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F48FB1"
        android:onClick="onClick"
        android:text="@string/Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="124dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748">

        <TextView
            android:id="@+id/ti"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center|left"
            android:hint="@string/Ti"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wqd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center|left" />

        <TextView
            android:id="@+id/wqd3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center|left" />
    </LinearLayout>

    <EditText
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/MM"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>